implemented proof of concept for images over webrtc

--- a/basic_demo/index.html
+++ b/basic_demo/index.html
@@ -16,5 +16,8 @@
     <textarea></textarea>
     <button id='send'>Send</button>
     <textarea id='receive'></textarea>
+    <div id='test'>
+      <cdnImg src='img/logo.png' />
+    </div>
   </body>
 </html>
