--- a/demo/public-data-channel/signal-server/index.html
+++ b/demo/public-data-channel/signal-server/index.html
@@ -9,13 +9,10 @@
 
     <p id="demo"></p>
 
-    <button onclick="sendData()">Send data</button>
-    <!--<button onclick="createConnection()">Send offer</button>-->
-    <!--<button onclick="sendData()">Send some data</button>-->
-    <!--<button onclick="setDataChannel()">Setup data channel</button>-->
+    <button onclick="sendDataMessage()">Send data</button>
 
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/client.js"></script>
-    // Todo: Adapter js
 </body>
 </html>
