[WIP] started to implement the service worker approach

--- a/demo/public-data-channel/signal-server/index.html
+++ b/demo/public-data-channel/signal-server/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/WebRTCConnection.js"></script>
+    <script src="js/p2pCDN.js"></script>
 </head>
 <body>
     <h1>Public data channel WebRTC demo</h1>
+    <img src='img/logo.png' />
 
-    <p id="demo"></p>
-
-    <button onclick="sendDataMessage()">Send data</button>
-
-    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/client.js"></script>
 </body>
 </html>
