--- a/web_app/index.html
+++ b/web_app/index.html
@@ -6,7 +6,7 @@
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/WebRTCConnection.js"></script>
-    <script src="js/p2pCDN.js"></script>
+    <script src="../src/client/p2pCDN.js"></script>
 </head>
 <body>
     <h1>Public data channel WebRTC demo</h1>
