--- a/web_app/index.html
+++ b/web_app/index.html
@@ -5,15 +5,15 @@
     <title>Title</title>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/WebRTCConnection.js"></script>
-    <script src="../src/client/p2pCDN.js"></script>
+    <script src="js/signaling.js"></script>
+    <!--<script src="js/WebRTCConnection.js"></script>-->
+    <!--<script src="../src/client/p2pCDN.js"></script>-->
 </head>
 <body>
     <h1>Public data channel WebRTC demo</h1>
     <p id="demo"></p>
 
     <button id="btnRequestData">Request resource</button>
-    <button onclick="window.location.href='http://localhost:8080/page_2.html'">Go to page with resources</button>
 
     <script>
       document.getElementById("btnRequestData").onclick = function(){
