enable debug support

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/debug.js"></script>
     <script src="js/signaling.js"></script>
     <!--<script src="js/WebRTCConnection.js"></script>-->
     <!--<script src="../src/client/p2pCDN.js"></script>-->
