--- a/web_app/index.html
+++ b/web_app/index.html
@@ -25,7 +25,7 @@
     <script>
       document.getElementById("btnStats").onclick = function(){
         var doc = document.getElementById("info");
-        doc.innerHTML = 'Peer connections: ' + webRTC.peers.length;
+        doc.innerHTML = 'Peer connections: ' + peer.peers.length;
       };
 
       document.getElementById("btnDataBig").onclick = function(){
