added status notifications from client to allow the cdn to work on page load

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h1>OpenHPI: P2P CDN</h1>
+    <img src="img/fab.gif" />
     <div id="stats">
         <p id="peerid"></p>
         <p id="connections"></p>
