--- a/web_app/index.html
+++ b/web_app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 
@@ -11,10 +11,23 @@
     <script src="js/utils.js"></script>
 
     <script src="js/p2pCDN.js"></script>
+    <script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
 </head>
 <body>
     <h1>OpenHPI: P2P CDN</h1>
     <img src="img/fab.gif" />
+    <video id="video"
+       class="video-js vjs-default-skin"
+       height="300"
+       width="600"
+       autoplay
+       controls>
+        <p>
+          Your browser doesn't support video. Please <a href="http://browsehappy.com/">upgrade your browser</a> to see the
+          example.
+        </p>
+        <source src="http://localhost:8080/video/example_video.m3u8" type="application/vnd.apple.mpegurl">
+    </video>
     <div id="stats">
         <p id="peerid"></p>
         <p id="connections"></p>
@@ -56,6 +69,9 @@
         var doc = document.getElementById("dataSmall");
         doc.innerHTML += '<img src="img/logo.jpg">';
       };
+
+      videojs(document.querySelector('video'));
+
     </script>
 
 </body>
