introduced p2pcdn:onUpdate and p2pcdn:onPeerId events

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script>
+      document.addEventListener('p2pCDN:onPeerId', function(event){
+        document.addEventListener('DOMContentLoaded', function(){
+          var id = document.getElementById("peerid");
+          alert(event.detail)
+          id.innerHTML = 'PeerId: ' + event.detail;
+        }, false);
+      });
+    </script>
     <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -41,24 +50,19 @@
     <button id="btnDataSmall">Request small resource</button>
 
     <script>
-        p2pCnd.onPeerId = function(peerId){
-          var id = document.getElementById("peerid");
+      document.addEventListener('p2pCDN:onUpdate', function(event){
+        var peers = event.detail;
+        var conCount = document.getElementById("connections");
+        var peersInfo = document.getElementById("peers");
 
-          id.innerHTML = 'PeerId: ' + peerId;
-        };
-
-        p2pCnd.onUpdate = function(peers) {
-          var conCount = document.getElementById("connections");
-          var peersInfo = document.getElementById("peers");
-
-          conCount.innerHTML = 'Connections: ' + peers.length + '</br>';
-          peersInfo.innerHTML = "";
-          for (var i = 0; i < peers.length; i++){
-            var peer = peers[i];
-            peersInfo.innerHTML += '&emsp; Id: ' + peer.id + ' &emsp; resources: ' + peer.resources.length  + '</br>';
-            // could show ice candidates here
-          }
-        };
+        conCount.innerHTML = 'Connections: ' + peers.length + '</br>';
+        peersInfo.innerHTML = "";
+        for (var i = 0; i < peers.length; i++){
+          var peer = peers[i];
+          peersInfo.innerHTML += '&emsp; Id: ' + peer.id + ' &emsp; resources: ' + peer.resources.length  + '</br>';
+        // could show ice candidates here
+        }
+      });
 
       document.getElementById("btnDataBig").onclick = function(){
         var doc = document.getElementById("dataBig");
