--- a/web_app/index.html
+++ b/web_app/index.html
@@ -25,19 +25,19 @@
 </head>
 <body>
     <h1>OpenHPI: P2P CDN</h1>
-    <img src="img/fab.gif" />
-    <video id="video"
-       class="video-js vjs-default-skin"
-       height="300"
-       width="600"
-       autoplay
-       controls>
-        <p>
-          Your browser doesn't support video. Please <a href="http://browsehappy.com/">upgrade your browser</a> to see the
-          example.
-        </p>
-        <source src="http://localhost:8080/video/example_video.m3u8" type="application/vnd.apple.mpegurl">
-    </video>
+    <!--<img src="img/fab.gif" />-->
+    <!--<video id="video"-->
+       <!--class="video-js vjs-default-skin"-->
+       <!--height="300"-->
+       <!--width="600"-->
+       <!--autoplay-->
+       <!--controls>-->
+        <!--<p>-->
+          <!--Your browser doesn't support video. Please <a href="http://browsehappy.com/">upgrade your browser</a> to see the-->
+          <!--example.-->
+        <!--</p>-->
+        <!--<source src="http://localhost:8080/video/example_video.m3u8" type="application/vnd.apple.mpegurl">-->
+    <!--</video>-->
     <div id="stats">
         <p id="peerid"></p>
         <p id="connections"></p>
