adjust events and demo frontend

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -3,14 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script>
-      document.addEventListener('ui:onPeerId', function(event){
-        document.addEventListener('DOMContentLoaded', function(){
-          var id = document.getElementById("peerid");
-          id.innerHTML = 'PeerId: ' + event.detail;
-        }, false);
-      });
-    </script>
     <link href="https://vjs.zencdn.net/7.0.5/video-js.css" rel="stylesheet">
 
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
@@ -21,23 +13,36 @@
 
     <script src="js/p2pCDN.js"></script>
 
+    <script> // init
+        localStorage.debug = '*,-socket.io*,-engine*';
+        var CHANNEL = 'FIXED_CLASS_1';
+        var STUN_SERVER = {
+          'iceServers': [
+            {
+              'urls': 'stun:stun.l.google.com:19302',
+            },
+          ],
+        };
+        var peer = new Peer(CHANNEL, STUN_SERVER);
+    </script>
+
+
     <script src="https://vjs.zencdn.net/7.0.5/video.js"></script>
 </head>
 <body>
     <h1>OpenHPI: P2P CDN</h1>
     <!--<img src="img/fab.gif" />-->
-    <!--<video id="video"-->
-       <!--class="video-js vjs-default-skin"-->
-       <!--height="300"-->
-       <!--width="600"-->
-       <!--autoplay-->
-       <!--controls>-->
-        <!--<p>-->
-          <!--Your browser doesn't support video. Please <a href="http://browsehappy.com/">upgrade your browser</a> to see the-->
-          <!--example.-->
-        <!--</p>-->
-        <!--<source src="http://localhost:8080/video/example_video.m3u8" type="application/vnd.apple.mpegurl">-->
-    <!--</video>-->
+    <video id="video"
+       class="video-js vjs-default-skin"
+       height="300"
+       width="600"
+       autoplay
+       controls>
+        <p>
+          Your browser doesn't support video.
+        </p>
+        <source src="/video/example_video.m3u8">
+    </video>
     <div id="stats">
         <p id="peerid"></p>
         <p id="connections"></p>
@@ -52,16 +57,21 @@
 
     <script>
       document.addEventListener('ui:onUpdate', function(event){
-        var peers = event.detail;
+        if (!document.getElementById("peerid"))
+          return;
+
+        var peer = event.detail;
+        var id = document.getElementById("peerid");
         var conCount = document.getElementById("connections");
         var peersInfo = document.getElementById("peers");
 
-        conCount.innerHTML = 'Connections: ' + peers.length + '</br>';
+        id.innerHTML = 'PeerId: ' + peer.peerId;
+
+        conCount.innerHTML = 'Connections: ' + peer.peers.length + '</br>';
         peersInfo.innerHTML = "";
-        for (var i = 0; i < peers.length; i++){
-          var peer = peers[i];
-          peersInfo.innerHTML += '&emsp; Id: ' + peer.id + ' &emsp; resources: ' + peer.resources.length  + '</br>';
-        // could show ice candidates here
+        for (var i = 0; i < peer.peers.length; i++){
+          var tmpPeer = peer.peers[i];
+          peersInfo.innerHTML += '&emsp; Id: ' + tmpPeer.id + ' &emsp; resources: ' + tmpPeer.resources.length  + '</br>';
         }
       });
 
