--- a/web_app/index.html
+++ b/web_app/index.html
@@ -47,7 +47,10 @@
             [
               '/img/',
               '/video/'
-            ]
+            ],
+            path: 'sw.js',
+            scope: '/',
+            basePath: '/'
         }
       };
     var peer = new Peer(config);
